resources/less/chrome/main.less
@import "../variables";
@import "../mixins";

.main {
  position: absolute;
  display: block;
  height: 100%;
  right: 0;
  top: 0;
  left: @menu-width;

  color: white;

  .main-container {
    height: 100%;
    position: relative;

    .main-viewport {
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      bottom: @toolbar-height;

      .project-info {

        .name {
          padding: 20px;

          background-color: @project-info-background;
          border-bottom: 1px solid @project-info-border;
          font-size: 16px;

          .input-support();

          .project-name {
            margin-left: 30px;
          }

        }

        i.fa {
          position: absolute;
          left: 20px;
          line-height: 23px;
          color: #ccc;
        }

        .tags {
          .project-info-mixin();

          ul {
            margin: 0
          }
        }

        .due-date {
          .project-info-mixin();

          .date-picker {
            display: inline-block;

            #project-due-date-picker {
              background-color: @project-info-background;
              width: 74px;
              padding: 0;
              color: white;
              border: 0 none;
              box-shadow: none;
              line-height: @project-info-height - 2px;
              height: @project-info-height - 2px;
              display: inline-block;

              &.empty {
                width: 110px;
              }

              &:focus {
                outline: none;
                border: 0 none;
                box-shadow: none;
              }
            }

            #clear-due-date {
              display: inline-block;
              margin-left: 4px;
              height: @project-info-height - 2px;

              i.fa {
                cursor: pointer;
                position: relative;
                left: 0;

                &:hover {
                  color: @icon-red;
                }
              }
            }
          }

          .today-picker {
            display: inline-block;
            margin-left: 20px;

            .show-before {
              #days-input {
                display: inline-block;

                width: 28px;
                height: 22px;
                line-height: 22px;
                margin-left: 6px;

                text-align: right;

                input {
                  width: 28px !important;
                  height: 22px;
                  background-color: @project-info-background;
                  text-align: right;
                  border: 0 none;

                  &:focus {
                    outline: none;
                  }
                }
              }

              .bootstrap-select {
                margin-left: 4px;
              }
            }

            .bootstrap-select {
              margin-left: 6px;
            }
          }
        }

        .description {
          .project-info-mixin();

          #description-output {
            height: 100%;

            p:last-child {
              margin-bottom: 0;
            }

            &.empty[placeholder]:after {
              content: attr(placeholder);
              color: #ccc;
              font-weight: lighter;
            }

            &.empty.pending-edit:after {
              content: none;
            }


            textarea {
              height: 100%;
              width: 100%;
              min-height: 20px;
              background-color: @project-info-background;
              border: 0 none;
              box-shadow: none;
              padding: 0;

              &:focus {
                outline: none;
              }
            }
          }
        }
      }

      .empty-inbox {
        width: 100%;
        position: absolute;
        top: 50%; left: 50%;
        transform: translate(-50%,-50%);

        .image-container {
          width: 100%;
          text-align: center;

          .image-cropper {
            width: @empty-inbox-image-size;
            height: @empty-inbox-image-size;
            border-radius: @empty-inbox-image-size / 2;

            overflow: hidden;
            margin: auto;
          }

          .image-description{
            padding-top: 4px;
            font-size: 11px;
            color: #aaa;

            a {
              color: @main-link-color;

              &:hover {
                color: @main-link-color-hover;
                cursor: pointer;
                text-decoration: none;
              }
            }
          }
        }
        .message {
          text-align: center;

          padding: 30px;
          font-size: 18px;

          color: white;
        }
      }

      #tasks-container {
        margin-top: 6px;
        height: 100%;

        .toggle-hide-done {
          margin-left: 4px;
          font-weight: 300;
          color: #aaa;

          cursor: pointer;
        }

        ul {
          margin: 8px 0;
          padding: 0;

          li {
            list-style: none;
            margin: 4px;
            padding: 6px 8px;
            border-radius: 4px;
            .input-support();

            div.name {
              margin: 0 0 0 20px;

              input {
                witdh: auto !important;
              }
            }
          }
        }

        .todo-container {
          li {
            background-color: @todo-background;
            color: @todo-color;
            list-style: none;

            div.name {
              height: 24px;
              line-height: 24px;
              display: inline-block;

              &.empty[placeholder]:after {
                content: attr(placeholder);
                color: #ccc;
                font-weight: lighter;
              }

              &.pending-edit{
                display: block;
                margin-right: 20px;

                &.empty:after {
                  content: none;
                }
              }

              input {
                height: 24px;
                border: 0 none;
                padding: 0;
                background-color: transparent;

                &:focus {
                  outline: none;
                }
              }
            }

            &.selected {
              background-color: mix(@icon-blue, @todo-background);

              div.name.empty[placeholder]:after {
                color: #444;
              }
            }

          }
        }

        .done-container{
          margin-top: 30px;

          li {
            background-color: @done-background;
            color: @done-color;

            &.selected {
              background-color: mix(@icon-blue, @done-background);
            }

          }
        }
      }
    }

    .main-toolbar {
      position: absolute;
      height: @toolbar-height;
      right: 0;
      left: 0;
      bottom: 0;

      background-image: url(../img/px_by_Gre3g.png);
      padding: 10px;

      .toolbar-container {
        height: 100%;
        position: relative;

        .items {
          height: 100%;
          position: relative;
          margin-right: @toolbar-search-width + 10px;

          .group {
            margin-top: 5px;
            position: absolute;

            &.disabled {
              color: @disabled-action-color;

              .item {
                border-color: @project-info-border;
                cursor: default;

                .icon {
                  .fa-star-o, .fa-check, .fa-arrow-right {
                    color: @disabled-action-color;
                  }
                }
              }
            }

            &.left {
              left: 0;
            }

            &.center {
              left: 50%;
              transform: translate(-50%, 0);
            }

            &.right {
              right: 0;
            }

            .item {
              display: inline-block;
              padding: 8px;
              width: 82px;
              margin: 0 2px;
              text-align: center;
              font-weight: 300;
              cursor: pointer;


              @media screen and (max-width: 774px) {
                width: 50px;
                height: 50px;
                position: relative;
                border-radius: 50%;

                border: 1px solid white;
                background-color: @selection-background;

                .icon {
                  position: absolute;
                  top: 50%;
                  left: 50%;
                  transform: translate(-50%, -50%);
                }

                span.text {
                  display: none;
                }
              }

              .icon {
                font-size: 18px;
                margin-bottom: 4px;

                .fa-plus {
                  color: white;
                }

                .fa-star-o {
                  color: @icon-yellow;
                }

                .fa-check {
                  color: @icon-green;
                }

                .fa-arrow-right {
                  color: @icon-brown;
                }
              }
            }
          }
        }

        .search {
          width: @toolbar-search-width;
          height: 100%;
          float: right;

          .search-container {
            position: absolute;
            top: 50%;
            right: 0;
            transform: translate(0, -50%);

            .icon {
              padding: 0 4px 0 0;
              float: left;
              background-color: @selection-background;
              border: 1px solid @project-info-border;
              border-right: 0 none;

              i {
                color: #999;
                line-height: @searchbar-height - 2px;
                padding: 0 8px;
              }
            }

            input {
              cursor: pointer;
              height: @searchbar-height;
              border: 1px solid @project-info-border;
              border-left: 0 none;
              width: @toolbar-search-width - 34px;
              background-color: @selection-background;

              &:focus{
               outline: none;
              }
            }
          }
        }
      }
    }
  }
}

